--- a/bachproef/resultaten.tex
+++ b/bachproef/resultaten.tex
@@ -4,6 +4,7 @@
 
 \chapter{Werkwijze en resultaten}%
 \label{ch:resultaten}
+In dit hoofdstuk wordt besproken wat gedaan werd tijdens dit onderzoek, wat de resultaten waren en waarom bepaalde keuzes gemaakt werden.
 
 \section{Geteste modellen}
 \label{sec:modellen}
