--- a/bachproef/voorwoord.tex
+++ b/bachproef/voorwoord.tex
@@ -11,3 +11,10 @@
 %% waarom jij het onderwerp wil bespreken.
 %% Vergeet ook niet te bedanken wie je geholpen/gesteund/... heeft
 
+Voor mijn bachelorproef wou ik graag iets doen dat een uitdaging was, maar dat ook verder nog nuttig zou zijn na het afronden van mijn bachelorproef, wat met dit onderwerp zeker bereikt werd. Ondanks het feit dat het trainen niet het resultaat leverde waarop ik gehoopt had, heb ik wel veel bijgeleerd en ben ervan overtuigd dat als hier nog verder op gewerkt wordt, dit nog steeds een nuttig onderzoek was.
+
+Ik wil in de eerste plaats mijn co-promotor dhr. Jorrit Campens bedanken voor het aanreiken van dit onderwerp en de begeleiding tijdens het verloop van de bachelorproef. Het was een unieke kans om iets bij te leren en ondertussen te werken aan iets dat een effect zou kunnen hebben in de opleiding voor toekomstige verpleegkundigen.
+
+Ook wil ik graag mijn promotor mevr. Veerle Depestele bedanken voor de opvolgingen tijdens mijn onderzoek en het geven van feedback waar nodig. Ik ben ervan overtuigd dat dit geholpen heeft om deze bachelorproef tot een goed einde te brengen.
+
+Tenslotte wil ik ook mijn familie en vrienden bedanken die mij gesteund hebben doorheen deze bachelorproef, maar ook gedurende de opleiding die mij tot deze bachelorproef geleid heeft.
